# rlt

./: .gitignore  ONLINE_RL_TASKS.md  README.md  RLT训练包部署指南.md  fix-nvidia-gpu.sh  机械臂启动说明.md
rlt_project/rlt_reproduce/: README.md  pyproject.toml
rlt_project/rlt_reproduce/configs/: default.yaml  fr3_robotiq.yaml  plug_insertion.yaml  plug_insertion_gpu.yaml  robotiq.yaml
rlt_project/rlt_reproduce/configs/franka/: fr3_franka.yaml  franka_hand.yaml
rlt_project/rlt_reproduce/configs/robotiq/: fr3_robotiq.yaml  robotiq.yaml
rlt_project/rlt_reproduce/data/: plug_insertion_npz
rlt_project/rlt_reproduce/data/plug_insertion/: ep_00000.json  ep_00001.json  ep_00002.json  ep_00003.json  ep_00004.json  ep_00005.json  ep_00006.json  ep_00007.json  ep_00008.json  ep_00009.json  ep_00010.json  ep_00011.json  ep_00012.json  ep_00013.json  ep_00014.json  ep_00015.json  ep_00016.json  ep_00017.json  ep_00018.json  ep_00019.json  ep_00020.json  ep_00021.json  ep_00022.json  ep_00023.json  ep_00024.json  ep_00025.json  ep_00026.json  ep_00027.json  ep_00028.json  ep_00029.json  ep_00030.json  ep_00031.json  ep_00032.json  (+68 more)
rlt_project/rlt_reproduce/docs/: ONLINE_RL_ROBOT.md  ONLINE_RL_RUNBOOK.md  ONLINE_RL_WORK_PLAN.md
rlt_project/rlt_reproduce/scripts/: _robot_env.sh  activate_rlt.sh  collect_plug_insertion.sh  download_checkpoint.py  preflight.sh  run_rl_server.sh  run_robotiq_test.py  setup_env.sh  setup_gpu.sh  setup_robotiq.sh  start_arm.sh  start_gpu_rl_server.sh  start_gripper.sh  start_robot.sh  start_robotiq.sh  stop_robot.sh  test_franka_gripper.sh  test_robotiq.sh
(+128 files in other folders)
