[project]
name = "rlt-reproduce"
version = "0.1.0"
description = "Community reproduction of Physical Intelligence RLT (RL Token) method"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "einops>=0.8.0",
    "hydra-core>=1.3.0",
    "numpy>=1.22.4,<2.0.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "pyyaml>=6.0",
    "rich>=14.0.0",
    "torch>=2.5.0",
    "tqdm>=4.66.0",
    "tyro>=0.9.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
rlt-verify = "rlt.scripts.verify_env:main"
rlt-train-token = "rlt.scripts.train_rl_token:main"
rlt-train-rl = "rlt.scripts.train_online_rl:main"
rlt-smoke = "rlt.scripts.smoke_test:main"
rlt-collect = "rlt.scripts.collect_critical_phase:main"
rlt-collect-plug = "rlt.scripts.collect_plug_insertion:main"
rlt-export-gpu = "rlt.scripts.export_for_gpu:main"
rlt-extract-emb = "rlt.scripts.extract_vla_embeddings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlt"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
